@@ -22,6 +22,10 @@ application {
     mainClass = 'com.company.incidentdesk.startup.IncidentDeskLauncher'
 }
 
+run {
+    jvmArgs = ['--enable-native-access=javafx.graphics']
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.11.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
